Add unit tests for timestamping